Fixed scrollbar appearing on media-content in the Projects page, by setting overflow-x to visible

--- a/css/style.css
+++ b/css/style.css
@@ -159,5 +159,7 @@ h1.is-5 {
 }
 }
 
-
+.media-content {
+  overflow-x: visible;
+}
 /* * { border: 1px solid red; } */
